fix: mobile text overflow

--- a/src/pages/registration/component/Sidebar/Sidebar.module.scss
+++ b/src/pages/registration/component/Sidebar/Sidebar.module.scss
@@ -268,3 +268,12 @@
     margin-top: 2rem;
   }
 }
+@media screen and (max-width: 410px) {
+  .page {
+    .topPage {
+      .heading {
+        font-size: 2rem;
+      }
+    }
+  }
+}
